# open3d_ros_pointcloud_conversion

./: CMakeLists.txt  lib_cloud_conversion_between_Open3D_and_ROS.py  package.xml  setup.py
launch/: demo.launch
scripts/: pc2_to_pcd.py  pcd_to_pc2.py
src/open3d_ros_pointcloud_conversion/: __init__.py  open3d_pc2.py
