<?xml version="1.0"?>
<package format="2">
  <name>open3d_ros_pointcloud_conversion</name>
  <version>0.0.1</version>
  <description>conversions between sensor_msgs PointCloud2 and Open3D PointCloud</description>

  <maintainer email="felixchenfy@gmail.com">feiyu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
